# vcmp-squirrel-mmdb

./: CMakeLists.txt  README.md  SQModule.h  SqImports.h  appveyor.yml  console.h  main.c  main.h  maxminddb.cmake  sqfuncs.h  squtils.h
